# university

./: README.md
semester_1/lab_2-task10/: main.cpp
semester_1/lab_2-task7/: main.cpp
semester_1/lab_3-task15/: main.cpp
semester_1/lab_4-task3/: main.cpp
semester_1/lab_4-task7/: main.cpp
semester_1/lab_5-task2/: main.cpp
semester_1/lab_6-task5/: main.cpp
semester_2/lab3a/: main.cpp
semester_2/lab_1/: database.cpp
semester_2/lab_2.1/: 2.a.cpp
semester_2/lab_2.b/: 2.9  2.9.cpp
semester_2/lab_3.a/: main.cpp
semester_2/lab_4/: main.cpp
semester_2/lab_5/: main.cpp
semester_2/lab_6/: main.cpp
semester_2/lab_7/: index.html  records.js  script.js  styles.css  sudoku-generator.js
semester_3/ATS/lab.group.lurozklad/: main.cpp
semester_3/ATS/labgrouplu/: main.cpp
semester_3/ATS/labsoloRK/: main.cpp
semester_3/OOP/Project/: converters.py  gui.py  main.py  utils.py
semester_3/OOP/lab1/: gui.py  main.py  system_interface.py
semester_4/OBD/kr-2/: KR2.accdb
semester_4/OBD/kr-3/: description.txt  functions_description.txt  liashenko.odb
semester_4/OOP/lab1/: main.py  system_interface.py
semester_4/dev_web/lab/: delivery.html  index.html  product.html  script.js  style.css
semester_5/ROS-OB/Lab_1/: .gitignore  CMakeLists.txt  Readme.md
semester_5/ROS-OB/Lab_1/src/mpi/: main.cpp
semester_5/ROS-OB/Lab_1/src/serial/: main.cpp
semester_5/ROS-OB/Lab_2/: CMakeLists.txt  ParallelMM  ParallelMM.cpp  SerialMM  SerialMM.cpp  readme.md
semester_5/ROS-OB/Lab_3/: ParallelGauss  ParallelGauss.cpp  SerialGauss  (+2 more)
semester_5/nosql/: .gitignore
(+964 files in other folders)
